@@ -1,5 +1,5 @@
 /* GNU/Linux on ARM native support.
-   Copyright (C) 1999-2013 Free Software Foundation, Inc.
+   Copyright (C) 1999-2002, 2004-2012 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
